druckreife bis cakra 8 fertig

--- a/intro.tex
+++ b/intro.tex
@@ -3894,32 +3894,35 @@ naśya:\\nti/
 %idānīṃ aṣṭamacakraṃ brahmaraṃdhrasthāne śatadalaṃ   vartate / \N1
 %idānīṃ aṣṭamacakraṃ brahmaraṃdhrasthāne śatadalaṃ   vartate  \N2
 %idānīṃ aṣṭamacakraṃ brahmaraṃdhrasthāne śatadalaṃ   vartate / \D
-%idānīṃ aṣṭamaṃ cakraṃ brahmaraṃdhrasthāne śatadalaṃ   vartate . \U1
+%idānīṃ aṣṭamacakraṃ brahmaraṃdhrasthāne śatadalaṃ   varrtate / \K1
+%idānīṃ aṣṭamacakraṃ brahmaraṃdhrasthāne śatadalaṃ   vartate // \J      
+%idānīṃ aṣṭamaṃ cakraṃ brahmaraṃdhrasthāne śatadalaṃ   vartate  \U1
 %idānīṃ brahmaraṃdhrasthāne 'ṣṭamaṃ śatadalaṃ cakraṃ varttate // \U2
 %-----------------------
 %guru devatā// caitanya śaktiḥ// virāṭ ṛṣiḥ// sarvotkṛṣṭasākṣiḥ// bhūtaturyātītacaitanyātmakaṃ// sarvavarṇāḥ// sarvamātrāḥ// sarvadalāni virāṭdeha sthitāvasthā prajñāvācā sohaṃ veda anupamasthānaṃ// ajapājapasahasra/ 1000 gha 02 pa 046 akṣara 40// sarvajapasaṃkhyā// 21600// ekaviṃśatisahasrāṇiṣaṭśatāni// tathaivaca niśāhe vahate// prāṇaḥ yojānātisapaṃḍitaḥ// sakāreṇa bahiryātihakāreṇaviśotpunaḥ// haṃsaḥ sohaṃ// tato maṃtraṃ jīvojapati sarvadā//    
 %-----------------------
 %Now exists the eigth \textit{cakra} having one hundred petals located at the aperture of Brahman.
 %-----------------------
-      \note[type=source, labelb=_93b, labele=_93e, nosep]{cf. YSv (PT, p. 833): brahmarandhre 'ṣṭamaṃ cakraṃ śatapatraṃ mahāprabham |}
-      \note[type=source, labelb=_93b, labele=_93e, nosep]{cf. SSP 2.8 (Ed. pp. 31-32): aṣṭamaṃ brahmarandhraṃ nirvāṇacakraṃ sūcikāgrabhedyam |}
-idānīṃ \linelabel{_93b}
-\app{\lem[wit={D,N1,N2}]{aṣṭamacakraṃ brahmarandhrasthāne śatadalaṃ}
-    \rdg[wit={U1}]{cakraṃ brahmaraṃdhrasthāne śatadalaṃ}
+      \note[type=source, labelb=_28b, labele=_28e, nosep]{cf. YSv (PT, p. 833): brahmarandhre 'ṣṭamaṃ cakraṃ śatapatraṃ mahāprabham |}
+      \note[type=source, labelb=_28b, labele=_28e, nosep]{cf. SSP 2.8 (Ed. pp. 31-32): aṣṭamaṃ brahmarandhraṃ nirvāṇacakraṃ sūcikāgrabhedyam |}
+idānīṃ \linelabel{_28b}
+\app{\lem[wit={D,J,K1,N1,N2}]{aṣṭamacakraṃ brahmarandhrasthāne śatadalaṃ}
+    \rdg[wit={U1}]{aṣṭamaṃ cakraṃ brahmaraṃdhrasthāne śatadalaṃ}
     \rdg[wit={E,P,U2}]{brahmarandhrasthāne 'ṣṭamaṃ śatadalaṃ cakraṃ}
     \rdg[wit={B,L}]{brahmaraṃdhrasthāne aṣṭamaṃ śatadalaṃ cakraṃ}}
-  vartate/\linelabel{_93e}
+  vartate/\linelabel{_28e}
+  \note[type=analogia, labelb=_29b, labele=_29e, nosep]{ \approx \textit{Nāḍīcakra} (ORI 1334 ll. 25-48): oṃ ekādaśaṃ sahasradalacakraṃ mūrtisthānaṃ (conj.] mūrvnisthānaṃ) guru dīptiḥ caitanyaśaktiḥ virāṭ ṛṣiḥ sarvotkṛṣṭasampattiḥ tūryātītacaitanyātmakā (em. ] tayoḥ tīta caitanyātmakā) sarvavarṇaṃ sarvamātrā sarvadā virāṭ deha (em.] daha) sthitāvasthā (em.] sthitnyavasthā) prajāvācā so haṃ veda anupame sthāna ajapā ekasahasra 1000 ghaṭikāḥ 2 śaṃ 4 a 9, 40 so haṃsa saṃkhya 21600 ekaviṃśati sahasrāṇi ṣaṭśatāni tataiva ca śaśahe vahate prāṇā sa ca kālaṃ vinaśyati sakāreṇa bahir yāti hakāreṇa viśet punaḥ haṃ so haṃ so tato mantraṃ jīve japati sarvadā}
   %%%%%%%%%%
   %%%%%%%%%%%
   %%%%%%%%%%
   \extra{
-        gurudevatā\dd{}
+        gurudevatā\dd{}\linelabel{_29b}
         caitanyaśaktiḥ\dd{}
-        virāṭa ṛṣiḥ\dd{}
-        sa:\\rvotkṛṣṭasākṣiḥ\dd{}
+        vi:\\rāṭa ṛṣiḥ\dd{}
+        sarvotkṛṣṭasākṣiḥ\dd{}
         bhūtaturyātītacaitanyātmakam\dd{}
         sarvavarṇāḥ\dd{}
-        sarvamātrāḥ\dd{}
+        sa:\\rvamātrāḥ\dd{}
         sarvadalāni\dd{}
         virāṭa \app{\lem[type=emendation, resp=egoscr]{dehaḥ}
           \rdg[wit={U2}]{deha}}\dd{}
@@ -3927,33 +3930,28 @@ idānīṃ \linelabel{_93b}
         prajñā vācā\dd{}
         sohaṃ \app{\lem[type=emendation, resp=egoscr]{vedaḥ}
           \rdg[wit={U2}]{veda}}\dd{}
-       anupamasthānaṃ\dd{}} %%prāṇaḥ = m nom pl
-      \linelabel{_94e}
-      %%%%%%%%%%%%%%%%%%
-      % The teacher is the deity. Consciousness is the power. Virāṭ is the Ṛṣi, the witness above everything. Made of consciousness is that which is associated with (\textit{bhūta°) the state beyond the fourth state. It has all colours. It has all matrices. It has all petals. The body is Virāṭ. The state is the standing still. The speech is wisdom.  The "I am that"-[expression] (\textit{sohaṃ}) is the Veda. The place is unsurpassed. A thousandfold recitation of the non-recited; 1000 [repetitions for]; 2 \textit{ghaṭi}s, 46 \textit{palā}s. and 40 \textit{akṣara}s.\footnote{It's not entirely clear what kind of measure is an \textit{akṣara}.} The count is all silent mutterings, [being] 21600. Day and night in this way it carries on. He who knows the breath is a learned person.
-      %%%%%%%%%%%%%%%%%
-    \extra{
+       anupamasthānaṃ\dd{} 
          \app{\lem[type=emendation, resp=egoscr]{ajapājapaḥ sahasraḥ}
           \rdg[wit={U2}]{ajapājapasahasra}}\dd{} 1000 ghaṭi 2 palā 46 akṣara 40\dd{}
-        \app{\lem[type=emendation, resp=egoscr]{sarvajapaḥ}
+        \app{\lem[type=emendation, resp=egoscr, alt={sarvajapaḥ}]{sa:\\rvajapaḥ}
           \rdg[wit={U2}]{sarvajapa°}} saṃkhyā\dd{}
         21600\dd{}
         ekaviṃśatisahasrāṇi ṣaṭśatāni\dd{}
-        tathaiva\\ ca niśāhe vahate\dd{}
+        tathaiva ca niśāhe va:\\hate\dd{}
         \app{\lem[type=emendation, resp=egoscr]{prāṇaṃ}
           \rdg[wit={U2}]{prāṇaḥ}} yo jānāti sa paṇḍitaḥ\dd{}}
       \end{prose}
       \begin{tlg}[11_2]
         \noindent
-      \note[type=analogia, labelb=_95bb, labele=_95ee, nosep]{ \approx \citetitle{bäumer2013} 156: sakāreṇa bahir yāti hakāreṇa viśet punaḥ | haṃsa haṃsety amuṃ mantraṃ jīvo japati nityaśaḥ ||}  
-      \note[type=analogia, labelb=_95bb, labele=_95ee, nosep]{ \approx \citetitle{vivekamartandaolda} 29: hakāreṇa bahir yāti sakāreṇa viśaty adhaḥ | haṃsa haṃsety amuṃ mantraṃ jīvo japati sarvadā ||}
-      \note[type=analogia, labelb=_95bb, labele=_95ee, nosep]{ \approx \citetitle{yogabija} 106: hakāreṇa bahir yāti sakāreṇa viśen marut | haṃsa haṃseti mantro 'yaṃ sarvajīvā japanti vai ||}
-      \note[type=analogia, labelb=_95bb, labele=_95ee, nosep]{ quoted with reference (\textit{yogabīje}) \approx \citetitle{yogacintamanilahore} (f. 6r): sakāreṇa bahir yāti hakāreṇa viśen marut | haṃsa haṃseti amum mantraṃ jīvo japanti sarvadā ||}
-      \note[type=analogia, labelb=_95bb, labele=_95ee, nosep]{ quoted with reference (\textit{yogabīje}) \approx \citetitle{hathatattvakaumudi} 22.27: hakāreṇa bahir yāti sakāreṇa viśet punaḥ | haṃsa haṃseti mantro'yaṃ sarve jīvā japanti vai ||}
-      \note[type=analogia, labelb=_95bb, labele=_95ee, nosep]{ \approx \citetitle{yogasikhopanisad} 1.130cd-131ab (Ed. p. 416): hakāreṇa bahir yāti sakāreṇa viśet punaḥ | haṃsa haṃseti mantro 'yaṃ sarvair jīvaiś ca japyate ||}
-      \tl{\extra{sakāreṇa bahir-yāti hakāreṇa viśet punaḥ/}}\\\linelabel{_95bb}
-      \tl{\extra{haṃsaḥ so'haṃ tato mantraṃ jīvo japati sarvadā\dd{} \begin{otherlanguage}{english}\uproman{11}.1\end{otherlanguage}\hskip-2pt\dd{}}}\\
-       \linelabel{_95ee}
+      \note[type=analogia, labelb=_30b, labele=_30e, nosep]{ \approx \citetitle{bäumer2013} 156: sakāreṇa bahir yāti hakāreṇa viśet punaḥ | haṃsa haṃsety amuṃ mantraṃ jīvo japati nityaśaḥ ||}  
+      \note[type=analogia, labelb=_30b, labele=_30e, nosep]{ \approx \citetitle{vivekamartandaolda} 29: hakāreṇa bahir yāti sakāreṇa viśaty adhaḥ | haṃsa haṃsety amuṃ mantraṃ jīvo japati sarvadā ||}
+      \note[type=analogia, labelb=_30b, labele=_30e, nosep]{ \approx \citetitle{yogabija} 106: hakāreṇa bahir yāti sakāreṇa viśen marut | haṃsa haṃseti mantro 'yaṃ sarvajīvā japanti vai ||}
+      \note[type=analogia, labelb=_30b, labele=_30e, nosep]{ quoted with reference (\textit{yogabīje}) \approx \citetitle{yogacintamanilahore} (f. 6r): sakāreṇa bahir yāti hakāreṇa viśen marut | haṃsa haṃseti amum mantraṃ jīvo japanti sarvadā ||}
+      \note[type=analogia, labelb=_30b, labele=_30e, nosep]{ quoted with reference (\textit{yogabīje}) \approx \citetitle{hathatattvakaumudi} 22.27: hakāreṇa bahir yāti sakāreṇa viśet punaḥ | haṃsa haṃseti mantro'yaṃ sarve jīvā japanti vai ||}
+      \note[type=analogia, labelb=_30b, labele=_30e, nosep]{ \approx \citetitle{yogasikhopanisad} 1.130cd-131ab (Ed. p. 416): hakāreṇa bahir yāti sakāreṇa viśet punaḥ | haṃsa haṃseti mantro 'yaṃ sarvair jīvaiś ca japyate ||}
+      \tl{\extra{sakāreṇa bahir-yāti hakāreṇa viśet punaḥ/}}\linelabel{_30b}\\
+      \tl{\extra{haṃsaḥ so'haṃ tato mantraṃ jīvo japati sarvadā\dd{} \begin{otherlanguage}{english}\uproman{11}.1\end{otherlanguage}\hskip-2pt\dd{}}}
+       \linelabel{_30e}\linelabel{_29e}
       \end{tlg}
    \end{edition}
   \begin{translation}
@@ -3968,15 +3966,15 @@ idānīṃ \linelabel{_93b}
 \phantomsection\label{cakra8trans}
 \begin{tlate}[p11_01]
   \noindent
-      Now, [there] exists the eighth \textit{cakra} having one hundred petals at the location of the aperture of Brahman.\footnote{The \textit{brahmarandhra}, often termed the ``aperture of Brahman,'' is a tiny opening at the crown near the fontanelle. Its name originates from ancient Upaniṣadic beliefs, portraying it as a portal for the individual soul (\textit{ātman}) to surpass bodily limitations and merge with the absolute (\textit{brahman}).} \extra{The deity is the teacher. The power is consciousness. The Ṛṣi is Virāṭa.\footnote{The Ṛṣi Virāṭa was previously assigned to the fifth \textit{cakra}.} [It is] the witness above everything. The nature of consciousness is the state beyond the fourth state. [It has] all colours. [It has] all \textit{mātrā}s\footnote{This could refer either to syllables, mother goddesses or both.}. [It has] all petals. The body is Virāṭa.\footnote{Due to the previously mentioned assignment of \textit{virāṭa} to the Ṛṣi of the \textit{cakra}, this could be an eyeskip, so that the originally intended assignment of the \textit{deha} of the eighth \textit{cakra} would be lost.} The state is steady\footnote{Possibly in the sense of cessation.}. The speech is wisdom. The Veda is the ``I am that''-[expression] (\textit{so'haṃ}). The place is unsurpassed. A thousandfold recitation of the non-recitation; 1000; 2 \textit{ghaṭi}s, 46 \textit{pala}s, 40 \textit{akṣara}s. The count of all mutterings [per day] is 21600. In this way, it carries on day and night. He who knows the breath is a learned person.}
+      Now, [there] exists the eighth \textit{cakra} having one hundred petals at the location of the aperture of Brahman.\footnote{The \textit{brahmarandhra}, often termed the ``aperture of Brahman,'' is a tiny opening at the crown near the fontanelle. Its name originates from ancient Upaniṣadic beliefs, portraying it as a portal for the individual soul (\textit{ātman}) to surpass bodily limitations and merge with the absolute (\textit{brahman}).} \extra{The deity is the teacher. The power is consciousness. The Ṛṣi is Virāṭa.\footnote{The Ṛṣi Virāṭa was previously assigned to the fifth \textit{cakra}.} [It is] the witness above everything. The nature of consciousness is the state beyond the fourth state. [It has] all colours. [It has] all \textit{mātrā}s.\footnote{This could refer either to syllables, mother goddesses or both.} [It has] all petals. The body is Virāṭa.\footnote{Due to the previously mentioned assignment of \textit{virāṭa} to the Ṛṣi of the \textit{cakra}, this could be an eyeskip, so that the originally intended assignment of the \textit{deha} of the eighth \textit{cakra} would be lost.} The state is steady.\footnote{Possibly in the sense of cessation.} The speech is wisdom. The Veda is the ``I am that''-[expression] (\textit{so'haṃ}). The place is unsurpassed. A thousandfold recitation of the non-recitation; 1000; 2 \textit{ghaṭi}s, 46 \textit{pala}s, 40 \textit{akṣara}s. The count of all mutterings [per day] is 21600. In this way, it carries on day and night. He who knows the breath is a learned person.}
       \end{tlate}
       \begin{tlate}[11_2]        
-\extra{\paragraph{\uproman{11}.1} With the sound ``sa'', he exhales. With the sound ``ha'', he inhales again: ``I am he, he is I''. Because of that, the embodied soul constantly utters the Mantra.\footnote{The exact source of this verse is unclear. Considering the possibilities presented in the parallels, it is evident that this verse represents a mixed variant. It is likely that this verse was widespread in the yoga traditions of the time and was transmitted from text to text and orally from teacher to student, which may have led to the continual emergence of new variants.}}
+\extra{\paragraph{\uproman{11}.1} With the sound ``sa'', he exhales. With the sound ``ha'', he inhales again: ``I am he, he is I''. Because of that, the embodied soul constantly utters the Mantra.\footnote{The exact source of this verse is unclear. Considering the possibilities presented in the parallels, it is evident that this verse represents a mixed variant. It is likely that this verse was widespread in the yoga traditions of the time and was transmitted from text to text and orally from teacher to student, which may have led to the continual emergence of new variants.}\fnsep\footnote{The supplementary material in \getsiglum{U2} terminates at this point, whereas the Nāḍīcakra scroll (ORI 1334) transmits a slightly longer passage. Immediately following the verse, it reads (diplomatically transcribed): \textit{ādhare liṅganabhau hṛdaya sarasi je tālamūle lalāṭe dvīpatre śoḍaśāre dvidaśadaśadale dvādaśāre catuṣkayāsānte bālamadhye ḍapha kaṭa sahite kaṇṭhadeśe svarāṇāṃ haṃ kam tatvārthayuktaṃ sakaladalayutaṃ varṇarūpaṃ namāmi}. This passage constitutes a highly corrupt and partially difficult-to-reconstruct doxographical enumeration of localisations, presented in ascending order and occasionally accompanied by iconographic features such as the number of petals or phonetic elements.}}
 \flushpage
 \end{tlate}
    \end{translation}
 \end{alignment}
-\pagebreak % after pp. 23-24
+\pagebreak % after pp. 31-32
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
@@ -4019,16 +4017,18 @@ idānīṃ \linelabel{_93b}
 %tasya kamalasya jālaṃdharapīṭha iti saṃjñā ...  \N1
 %tasya kamalasya jālaṃdharapīṭha iti saṃjñā ...  \N2
 %tasya kamalasya jālaṃdharapīṭha iti saṃjñā ...  \D
+%tasya kamalasya jālaṃdharapīṭha iti saṃjñā      \K1
+%tasya kamalasya jālaṃdharapīṭha iti saṃjñā//     \J
 %tasya kamalasya jālaṃdharapīṭha iti saṃjñā ...  \U1      
 %tasya kamalasya jālaṃdharapīṭha iti saṃjñā //   \U2
 %----------------------
 %``The (divine) seat of  Jālaṃdhara'' is the designation of the lotus of it. 
 %----------------------      
-      \begin{prose}[p11_02]
-        \note[type=testium, labelb=_95b, labele=_99xx, nosep]{ \approx  \textit{Yogasaṃgraha} (IGNCA 30020 f. 3v. ll. 2-5): brahmaraṃdhre śatadalaṃ jālaṃdharapīṭhasaṃjñakaṃ siddhapuruṣasyānacakraṃ tanmadhye gnidhūmrāreṣākārā ādimadhyaṃtarahitā puruṣasya mūrttir asti | tasyāḥ dhyānakartuḥ pṛthivyāṃ sthitāv api pṛthvī kṛtabādho na bhavati | trikālikajñānaṃ pratyakṣaṃ bhavati | āyurvṛddiḥ liṃgaśarīreṇa sarvatra pratyakṣaṃ gamāgamo bhavati |}     
-      \note[type=source, labelb=_95b, labele=_99xx, nosep]{cf. YSv (PT, p. 833): jālandharaṃ nāma pīṭhaṃ etat tu parikīrttitam | siddhapuṃsaḥ (\textit{°puṃsa°} YK 1.270) sthalaṃ jñātvā agnidhūmanibhā śikhā | ādimadhyāntahīnā strīpuṃmūrtti (\textit{°mūrtir} YK 1.270) varttate parā | antajñānī (\textit{antaryāmī} YK 1.271) bhaved dhyānād ākāśe 'pi samāgamaḥ | nirantaraṃ sarvavettā ity ūccāno mahān bhavet | jaganmadhye sthito jantur jagadbādhāvivarjitaḥ |}
-            \note[type=source, labelb=_95b, labele=_99xx, nosep]{cf. SSP 2.8 (Ed. pp. 31-32): tatra dhūmaśikhākāraṃ dhyāyet | tatra jālandharapīṭhaṃ mokṣapradaṃ bhavati |}
-      tasya\linelabel{_95b}
+\begin{prose}[p11_02]
+      \note[type=source, labelb=_31b, labele=_31e, nosep]{cf. YSv (PT, p. 833): jālandharaṃ nāma pīṭhaṃ etat tu parikīrttitam | siddhapuṃsaḥ (\textit{°puṃsa°} YK 1.270) sthalaṃ jñātvā agnidhūmanibhā śikhā | ādimadhyāntahīnā strīpuṃmūrtti (\textit{°mūrtir} YK 1.270) varttate parā | antajñānī (\textit{antaryāmī} YK 1.271) bhaved dhyānād ākāśe 'pi samāgamaḥ | nirantaraṃ sarvavettā ity ūccāno mahān bhavet | jaganmadhye sthito jantur jagadbādhāvivarjitaḥ |}
+            \note[type=source, labelb=_31b, labele=_31e, nosep]{cf. SSP 2.8 (Ed. pp. 31-32): tatra dhūmaśikhākāraṃ dhyāyet | tatra jālandharapīṭhaṃ mokṣapradaṃ bhavati |}  
+        \note[type=testium, labelb=_31b, labele=_31e, nosep]{ \approx  \textit{Yogasaṃgraha} (IGNCA 30020 f. 3v. ll. 2-5): brahmaraṃdhre śatadalaṃ jālaṃdharapīṭhasaṃjñakaṃ siddhapuruṣasyānacakraṃ tanmadhye gnidhūmrāreṣākārā ādimadhyaṃtarahitā puruṣasya mūrttir asti | tasyāḥ dhyānakartuḥ pṛthivyāṃ sthitāv api pṛthvī kṛtabādho na bhavati | trikālikajñānaṃ pratyakṣaṃ bhavati | āyurvṛddiḥ liṃgaśarīreṇa sarvatra pratyakṣaṃ gamāgamo bhavati |}     
+      tasya\linelabel{_31b}
 \app{\lem[wit={ceteri}]{kamalasya}
   \rdg[wit={E}]{kamala°}}
       \app{\lem[wit={ceteri}]{jālandharapīṭha}
@@ -4045,41 +4045,46 @@ idānīṃ \linelabel{_93b}
 %siddhapuruṣasya sthānam mūrti vartate // \B %Zeilensprung
 %siddhapuruṣasya sthānam // \N1
 %siddhapuruṣasya sthānam // \N2
-%siddhapuruṣasya sthānam // \D  
+%siddhapuruṣasya sthānam // \D
+%siddhapuruṣasya sthānam // \K1
+%siddhapuruṣasya sthānam // \J       
 %siddhapuruṣasya sthānam    \U1
 %siddhapuruṣasya sthānaṃ    \U2
 %----------------------      
 %[It is] the place of the accomplished person.
 %----------------------
       siddha\app{\lem[wit={ceteri},alt={°puruṣasya sthānam}]{puruṣasya sthānaṃ}
-        \rdg[wit={L,B}]{sthānam mūrti vartate}}/%\linelabel{_94e}
+        \rdg[wit={L,B}]{sthānam mūrti vartate}}/
 %----------------------
-%tanmadhye    'gnidhūmākārarekhā     yādṛśy    ādṛśy ekā  puruṣasya mūrttir varttate /  \E
-%tanmadhye    'gnidhūmākārarekhā     yādṛśī   tādṛśy ekā  puruṣasya mūrttir varttate /  \P
-%tanmadhye    'gnidhūmākārārekhā     yādṛśī   tādṛśy ekā  puruṣasya mūrttir varttate /  \L               
-%tanmadhye    'gnidhūmākārārekhā     yādṛśī   tādṛśy ekā  puruṣasya mūrttir varttate /  \B     
-%tanmadhye    'gnidhūmākārāreṣā      yādṛśī   tādṛśī ekā  puruṣasya mūrttir varttate /  \N1
-%tanmadhye    agnidhūmrākārarekhā    yādṛśī / tādṛśī ekā  puruṣasya mūrttir varttate /  \N2
-%tanmadhye    agnidhūmākārāreṣā      yādṛśī   tādṛśī ekā  puruṣasya mūrttir varttate /  \D
-%tanmadhye    agnidhūmrākārārekhā    yādṛśī   tādṛśī ekā  puruṣasya mūrtir  vartate     \U1
+%tanmadhye    'gnidhūmākārarekhā     yādṛśy     ādṛśy ekā  puruṣasya mūrttir varttate /  \E
+%tanmadhye    'gnidhūmākārarekhā     yādṛśī    tādṛśy ekā  puruṣasya mūrttir varttate /  \P
+%tanmadhye    'gnidhūmākārārekhā     yādṛśī    tādṛśy ekā  puruṣasya mūrttir varttate /  \L               
+%tanmadhye    'gnidhūmākārārekhā     yādṛśī    tādṛśy ekā  puruṣasya mūrttir varttate /  \B     
+%tanmadhye    'gnidhūmākārāreṣā      yādṛśī    tādṛśī ekā  puruṣasya mūrttir varttate /  \N1
+%tanmadhye    agnidhūmrākārarekhā    yādṛśī /  tādṛśī ekā  puruṣasya mūrttir varttate /  \N2
+%tanmadhye    agnidhūmākārāreṣā      yādṛśī    tādṛśī ekā  puruṣasya mūrttir varttate /  \D
+%tanmadhye    agnidhūmākārāreṣā      yādṛśī    tādṛśī ekā  puruṣasya mūrttir varttaṃte   \K1
+%tanmadhye    agnidhūmākārārekhā     yādṛśī//  tādṛśī ekā  puruṣasya mūrttir varttate //  \J      
+%tanmadhye    agnidhūmrākārārekhā    yādṛśī    tādṛśī ekā  puruṣasya mūrtir  vartate     \U1
 %tanmadhye    'gnidhūmrākārārekhāyāḥ  etādṛśī         ekā  puruṣasya mūrtir  vartate // \U2
 %----------------------      
 %In middle of it, there is a streak looking like the form of smoke and fire, and in such a way, the unique image of the person exists.
 %---------------------      
 \noindent
-    tanmadhye\app{\lem[wit={B,L}]{'gnidhūmākārā rekhā}
+    tanmadhye\app{\lem[wit={B,L}, alt={'gnidhūmākārā rekhā}]{'gnidhūmā:\\kārā rekhā}
       \rdg[wit={U1}]{agnidhūmrākārā rekhā}
       \rdg[wit={N1}]{'gnidhūmākārā reṣā}
-      \rdg[wit={D}]{agnidhūmākārā reṣā}
+      \rdg[wit={D,K1}]{agnidhūmākārā reṣā}
       \rdg[wit={E,P}]{'gnidhūmākārarekhā}
-      \rdg[wit={N2}]{agnidhūmrākārarekhā}
+      \rdg[wit={J,N2}]{agnidhūmrākārarekhā}
       \rdg[wit={U2}]{'gnidhūmrākārā rekhāyāḥ}}  
       \app{\lem[wit={ceteri}]{yādṛśī}
         \rdg[wit={E}]{yādṛśy°}
         \rdg[wit={U2}]{etādṛśī}}/
       \app{\lem[wit={X,B,P,L},alt={tādṛśy}]{tādṛ\skp{śy-e}}
         \rdg[wit={E}]{ādṛsy}
-        \rdg[wit={U2}]{\om}}\skm{śy-e}kā puruṣasya mūrtir-vartate/
+        \rdg[wit={U2}]{\om}}\skm{śy-e}kā puruṣasya mūrti\skp{r-va}\app{\lem[wit={ceteri}, alt={vartate}]{\skm{r-va}vartate}
+        \rdg[wit={K1}]{vartaṃte}}/ 
 %---------------------
 %tasyā  nādir nāṃto 'sti / \E
 %tasyā  nādināṃ 'to sti / \P
@@ -4088,6 +4093,8 @@ idānīṃ \linelabel{_93b}
 %tasyāḥ nāsty aṃtaḥ ādir-api nāsti / \N1????
 %tasyāḥ nāsty aṃtaḥ ādir-api nāsti / \N2
 %tasyāḥ nāsty aṃtaḥ ādir api nāsti / \D
+%tasyāḥ nāsty aṃtaḥ ādir api nāsti / \K1
+%tasyāḥ nāsty aṃta ādir api nāsti // \J      
 %tasyāḥ nāsty aṃtaḥ ādir-api nāsti    \U1
 %tasyā  nādir naṃto sti              \U2
 %---------------------
@@ -4096,18 +4103,21 @@ idānīṃ \linelabel{_93b}
 \app{\lem[wit={Y}]{tasyā}
   \rdg[wit={X}]{tasyāḥ}}
 \app{\lem[alt={nādir nānto'sti}, wit={ceteri}]{nādir-nānto'sti}
-        \rdg[wit={P}]{nādināṃ'to sti}
-        \rdg[wit={X}]{nāsty aṃtaḥ ādir api nāsti}}/
+        \rdg[wit={P}]{nādināṃ 'to sti}
+        \rdg[wit={D,K1,N1,N2,U1}]{nāsty aṃtaḥ ādir api nāsti}
+        \rdg[wit={J}]{aṃta ādir api nāsti}}/
 %---------------------    
-%tasyā  mūrtter dhyānakāraṇāt pratyakṣaṃ niraṃtaraṃ  puruṣasyākāśe   gamāgamau   bhavataḥ / \E
-%tasyā  mūrtter dhyānakaraṇāt pratyakṣaniraṃtaraṃ    puruṣasyākāśe   gamāgamau   bhavataḥ / \P
-%tasyā  mūrtir  dhyānakaraṇāt pratyakṣaniraṃtaraṃ    puruṣasyākāśe   gamāgamau   bhavataḥ / \L         
-%tasyā  mūrtir  dhyānakaraṇāt pratyakṣaṃ niraṃtaraṃ  puruṣasyākāśe   gamāgamau   bhavataḥ / \B
-%tasyāḥ mūrttir dhyānakaraṇāt pratyakṣaniraṃtaraṃ    puruṣasya ākāśe gamāgamau   bhavataḥ / \N1
-%tasyāḥ mūrttir dhyānakaraṇāt pratyakṣaniraṃtaraṃ    puruṣa ākāśe    gamāgame    bhavataḥ / \N2
-%tasyāḥ mūrtir  dhyānakaraṇāt pratyakṣaniraṃtaraṃ    puruṣasya ākāśe gamāgamau   bhavataḥ / \D
-%tasyāḥ mūrter  dhyānakaraṇāt/ pratyakṣaniraṃtaraṃ   puruṣasya ākāśi gamāmamo   bhavataḥ   \U1
-%tasyāḥ mūrter  dhyānakaraṇāt pratyakṣaniraṃtaraṃ    puruṣasyākāśa---gamāgamau bhavata //      \U2
+%tasyā  mūrtter dhyānakāraṇāt   pratyakṣaṃ niraṃtaraṃ  puruṣasyākāśe   gamāgamau   bhavataḥ / \E
+%tasyā  mūrtter dhyānakaraṇāt   pratyakṣaniraṃtaraṃ    puruṣasyākāśe   gamāgamau   bhavataḥ / \P
+%tasyā  mūrtir  dhyānakaraṇāt   pratyakṣaniraṃtaraṃ    puruṣasyākāśe   gamāgamau   bhavataḥ / \L         
+%tasyā  mūrtir  dhyānakaraṇāt   pratyakṣaṃ niraṃtaraṃ  puruṣasyākāśe   gamāgamau   bhavataḥ / \B
+%tasyāḥ mūrttir dhyānakaraṇāt   pratyakṣaniraṃtaraṃ    puruṣasya ākāśe gamāgamau   bhavataḥ / \N1
+%tasyāḥ mūrttir dhyānakaraṇāt   pratyakṣaniraṃtaraṃ    puruṣa    ākāśe gamāgame    bhavataḥ / \N2
+%tasyāḥ mūrtir  dhyānakaraṇāt   pratyakṣaniraṃtaraṃ    puruṣasya ākāśe gamāgamau   bhavataḥ / \D
+%tasyāḥ mūrti---dhyānakaraṇāt   pratyakṣaniraṃtaraṃ    puruṣasya ākāśe gamāgame   bhavataḥ // \K1
+%tasyāḥ mūrttir dhyānakaraṇāt// pratyakṣaniraṃtaraṃ    puruṣasya ākāśe gamāgamo   bhavati // \J (P6/20)       
+%tasyāḥ mūrter  dhyānakaraṇāt/  pratyakṣaniraṃtaraṃ    puruṣasya ākāśi gamāmamo   bhavataḥ   \U1
+%tasyāḥ mūrter  dhyānakaraṇāt   pratyakṣaniraṃtaraṃ    puruṣasyākāśa---gamāgamau bhavata //      \U2
 %---------------------    
 %BEDEUTUNG DES SATZES BIS JETZT UNKLAR! Idee: Zeilensprung aus übernächstem Satz! Streiche pratyakṣaṃ niraṃtaraṃ und der Satz ergibt Sinn!  
 %gamāgamau nom.  dual = coming and going ; bhavataḥ = 3p du ind pres von bhū
@@ -4118,18 +4128,21 @@ idānīṃ \linelabel{_93b}
       \app{\lem[wit={B,E,L,P}]{tasyā}
   \rdg[wit={ceteri}]{tasyāḥ}}
 \app{\lem[alt={mūrter},wit={E,P,U1,U2}]{mūrte\skp{r-dhyā}}
-  \rdg[wit={B,D,L,N1,N2}]{mūrtir}
-}\app{\lem[wit={B,E}, alt={dhyānakaraṇāt pratyakṣaṃ nirantaraṃ}]{\skm{r-dhyā}nakaraṇāt\skp{-}pratyakṣaṃ nirantaraṃ}
+  \rdg[wit={B,D,J,L,N1,N2}]{mūrtir}
+  \rdg[wit={K1}]{mūrti°}}
+\app{\lem[wit={B,E}, alt={dhyānakaraṇāt pratyakṣaṃ nirantaraṃ}]{\skm{r-dhyā}nakaraṇāt\skp{-}pratyakṣaṃ nirantaraṃ}
   \rdg[wit={ceteri}]{dhyānakaraṇāt pratyakṣanirantaraṃ}}
-      \app{\lem[wit={ceteri}, alt={puruṣasyākāśe}]{puruṣasyākāśe}
+\app{\lem[wit={ceteri}, alt={puruṣasyākāśe}]{puruṣasyākāśe}
+        \rdg[wit={D,J,K1,J}]{puruṣasya ākāśe}
+        \rdg[wit={U1}]{puruṣasya ākāśi}
         \rdg[wit={N2}]{puruṣa ākāśe}
-        \rdg[wit={U2}]{puruṣasyākāśa°}
-        \rdg[wit={U1}]{puruṣasya ākāśi}}
+        \rdg[wit={U2}]{puruṣasyākāśa°}}
       gamā\app{\lem[wit={ceteri},alt={°gamau}]{gamau}
-        \rdg[wit={U1}]{°gamo}
-        \rdg[wit={N2}]{°game}}
+        \rdg[wit={J,U1}]{°gamo}
+        \rdg[wit={K1,N2}]{°game}}
         \app{\lem[wit={ceteri}]{bhavataḥ}
-          \rdg[wit={U2}]{bhavata}}/\linelabel{_99xx}
+          \rdg[wit={U2}]{bhavata}
+          \rdg[wit={J}]{bhavati}}/
 %---------------------     
 %pṛthvīmadhye  sthitasyāpi    pṛthvī-------bādho   na bhavati / \E
 %pṛthvīmadhye  sthitasyāpi    pṛthaka                 bhavati   \P %Zeilenspringer führt zu Verlust von Zeile in Pune
@@ -4138,20 +4151,22 @@ idānīṃ \linelabel{_93b}
 %pṛthvīmadhye  sthitāv-api    pṛthvī kṣato bādho   na bhavati // \N1
 %pṛthvīmadhye  sthitāv-api    pṛthvī kṣato bādho   na bhavati // \N2      
 %pṛthvīmadhye  sthitāv-api    pṛthvī kṣato bādho   na bhavati // \D
+%pṛthvīmadhye  sthitāv-api    pṛthvī kṣato bādho   na bhavati // \K1
+%pṛthvīmadhye  sthitāv api//    pṛthvī kṣato bādho   na bhavati // \J        
 %pṛthvīmadhye  sthitāv-api    pṛthvī kṣato bādho   na bhavati     \U1
 %pṛthīvīmadhye sthitasyāpi    pṛthvī       bādhoko na bhati     \U2
 %---------------------
 %Affliction from the earth-element does not arise [anymore] even if one is situated in the middle of the earth.        
 %---------------------
-        \app{\lem[wit={ceteri}]{pṛthvīmadhye}
+        \app{\lem[wit={ceteri}, alt={pṛthvīmadhye}]{pṛthvī:\\madhye}
           \rdg[wit={B,U2}]{pṛtivīmadhye}}
-        \app{\lem[wit={ceteri}]{sthitasyāpi}     
-          \rdg[wit={Y},alt={sthitāv api}]{sthitāv\skp{-}api}}
+        \app{\lem[wit={Y}]{sthitasyāpi}     
+          \rdg[wit={X},alt={sthitāv api}]{sthitāv\skp{-}api}}
         \app{\lem[wit={E,L}]{pṛthvībādho}
           \rdg[wit={B}]{pṛtvībādho}
           \rdg[wit={P}]{pṛthaka}
-          \rdg[wit={U2}]{pṛthvī bādhoko}
-          \rdg[wit={X}]{pṛthvī kṣato bādho}}
+          \rdg[wit={U2}]{pṛthvībādho ko}
+          \rdg[wit={X}]{pṛthvīkṣato bādho}}
         \app{\lem[wit={ceteri}]{na bhavati}
           \rdg[wit={P}]{bhavati}}/
 %---------------------
@@ -4161,13 +4176,15 @@ idānīṃ \linelabel{_93b}
 %sakalāḥ pratyakṣaṃ niraṃtara paśyatī  ca pṛthak bhavati / \L
 %sakalāpratyakṣaniraṃtaraṃ    paśyati  ca pṛthak ca bhavati // \N1
 %sakalapratyakṣaniraṃtaraṃ    paśyati  ca pṛthak ca bhavati    \N2      
-%sakalāpratyakṣaniraṃtaraṃ    paśyati  ca pṛthak pṛthak bhavati \D      
+%sakalāpratyakṣaniraṃtaraṃ    paśyati  ca pṛthak pṛthak bhavati \D
+%sakalāpratyakṣaniraṃtaraṃ    paśyati  ca pṛthak ca bhavati \K1
+%sakalāpratyakṣaniraṃtaraṃ    paśyati  ca//  pṛthak ca bhavati \J        
 %sakalāpratyakṣaniraṃtaraṃ    paśyati  ca/ pṛthak ca bhavati // \U1
 %\om                                                     \U2
 %---------------------
 %He constantly sees everything in front of his eyes and he becomes separated (from the material world).
 %---------------------
-        \app{\lem[type=emendation, resp=egoscr, alt={sakalaṃ pratyakṣaṃ nirantaraṃ}]{sakalaṃ pratyakṣaṃ nira:\\ntaraṃ}
+        \app{\lem[type=emendation, resp=egoscr, alt={sakalaṃ pratyakṣaṃ nirantaraṃ}]{sakalaṃ pratyakṣaṃ nirantaraṃ}
           \rdg[wit={X}]{sakalāpratyakṣaṃ nirantaraṃ}
           \rdg[wit={B,L}]{sakalāḥ pratyakṣaṃ niraṃtara}
           \rdg[wit={E}]{sakalān pratyakṣaṃ niraṃtaraṃ}
@@ -4175,9 +4192,9 @@ idānīṃ \linelabel{_93b}
         \app{\lem[wit={ceteri}]{paśyati}
           \rdg[wit={L,B}]{paśyatī}
           \rdg[wit={P,U2}]{\om}}
-        \app{\lem[wit={E}]{pṛthagbhavati}
+        \app{\lem[wit={E}, alt={pṛthagbhavati}]{pṛthagbha:\\vati}
           \rdg[wit={B,L}]{ca pṛthak bhavati}
-          \rdg[wit={N1,N2,U1}]{ca pṛthak ca bhavati}
+          \rdg[wit={J,K1,N1,N2,U1}]{ca pṛthak ca bhavati}
           \rdg[wit={D}]{ca pṛthak pṛthak bhavati}
           \rdg[wit={P,U2}]{\om}}/
 %---------------------
@@ -4188,6 +4205,8 @@ idānīṃ \linelabel{_93b}
 %atiśayena āyur varddhate // \N1
 %atiśayena āyur varddhate // \N2     
 %atiśayena āyur varddhate // \D
+%atiśayena āyur varddhate // \K1
+%atiśayena āyur varddhate // \J        
 %atiśayena āyur varddhate // \U1
 %\om                         \U2
 %---------------------
@@ -4197,8 +4216,7 @@ idānīṃ \linelabel{_93b}
           \rdg[wit={B,L}]{atīśayanāyur}
           \rdg[wit={X}]{atiśayena āyur}
           \rdg[wit={U2}]{\om}}\app{\lem[alt={vardhate},wit={ceteri}]{\skm{r-va}rdhate}
-          \rdg[wit={B,L}]{vardhayate}}\dd{}
-        \linelabel{_99xx}
+          \rdg[wit={B,L}]{vardhayate}}\dd{}\linelabel{_31e}
       \end{prose}
    \end{edition}
   \begin{translation}
@@ -4211,7 +4229,7 @@ In the middle of it, there is a streak that looks like the manifestation of smok
 \end{tlate}
    \end{translation}
 \end{alignment}
-\pagebreak % after pp. 23-24X %%nachträglich eingefügte Seite 
+\pagebreak % after pp. 33-34 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
